<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBackdrop"
                android:layout_width="wrap_content"
                android:layout_height="327dp"
                android:contentDescription="@string/app_picture"
                android:scaleType="centerCrop"
                android:src="@drawable/img_background_dark" />

            <ImageView
                android:id="@+id/ivBlackout"
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:contentDescription="@string/blackout_app_picture"
                android:scaleType="fitXY"
                android:src="@drawable/img_background_dark" />


            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@id/ivBackdrop"
                android:layout_marginTop="-35dp"
                android:contentDescription="@string/app_logo"
                android:scaleType="fitXY"
                android:src="@drawable/img_background_dark" />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivBackdrop"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/ivLogo"
                android:fontFamily="@font/sk_modernist_bold"
                android:text="@string/default_app_name"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <RatingBar
                android:id="@+id/rbAppRatingAbove"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAppName"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/ivLogo"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.5"
                android:theme="@style/RatingBar" />

            <TextView
                android:id="@+id/tvAppRatingCountAbove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/rbAppRatingAbove"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/rbAppRatingAbove"
                android:fontFamily="@font/sk_modernist_regular"
                android:text="@string/default_rating_count"
                android:textColor="@color/grey_300"
                android:textSize="12sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAppRatingCountAbove"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_genre" />

            <TextView
                android:id="@+id/tvAppDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvGenres"
                android:layout_alignStart="@id/rvGenres"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/sk_modernist_regular"
                android:text="@string/default_app_desc"
                android:textColor="@color/grey_100"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvReviewAndRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAppDesc"
                android:layout_alignStart="@id/tvAppDesc"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/sk_modernist_bold"
                android:text="@string/review_and_ratings"
                android:textColor="@color/grey_100"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvRatingScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvReviewAndRatings"
                android:layout_alignStart="@id/tvReviewAndRatings"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/sk_modernist_bold"
                android:text="@string/default_rating_score"
                android:textColor="@color/grey_100"
                android:textSize="48sp" />

            <RatingBar
                android:id="@+id/rbAppRatingBelow"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvRatingScore"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/tvRatingScore"
                android:numStars="5"
                android:rating="4.9"
                android:stepSize="0.5"
                android:theme="@style/RatingBar" />

            <TextView
                android:id="@+id/tvAppRatingCountBelow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rbAppRatingBelow"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/tvRatingScore"
                android:fontFamily="@font/sk_modernist_regular"
                android:text="@string/default_review_count"
                android:textColor="@color/grey_200"
                android:textSize="13sp" />

            <View
                android:id="@+id/vSeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tvAppRatingCountBelow"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:background="@color/grey_800" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAuthors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vSeparator"
                android:layout_marginStart="25dp"
                android:layout_marginTop="-10dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_review" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/ivCircleBack"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/circle_for_arrow_back" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@id/ivCircleBack"
        app:layout_constraintEnd_toEndOf="@id/ivCircleBack"
        app:layout_constraintStart_toStartOf="@id/ivCircleBack"
        app:layout_constraintTop_toTopOf="@id/ivCircleBack"
        android:contentDescription="@string/arrow_back" />

    <ImageView
        android:id="@+id/ivCircleMore"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/circle_for_more_options" />

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="@id/ivCircleMore"
        app:layout_constraintEnd_toEndOf="@id/ivCircleMore"
        app:layout_constraintStart_toStartOf="@id/ivCircleMore"
        app:layout_constraintTop_toTopOf="@id/ivCircleMore"
        android:contentDescription="@string/more_options" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bInstall"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/yellow"
            android:fontFamily="@font/sk_modernist_bold"
            android:text="@string/install_button"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>