<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:background="@color/dark_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPersonImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivUserImage"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_background_dark"
                android:contentDescription="@string/review_author_picture" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/cvPersonImage"
            android:fontFamily="@font/sk_modernist_regular"
            android:text="@string/default_author_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUsername"
            android:layout_alignStart="@id/tvUsername"
            android:fontFamily="@font/sk_modernist_regular"
            android:text="@string/default_date"
            android:textColor="@color/white_diffuse"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvUserMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvPersonImage"
            android:layout_alignStart="@id/cvPersonImage"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/sk_modernist_regular"
            android:text="@string/default_app_desc"
            android:textColor="@color/grey_200"
            android:textSize="12sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>